--- a/game.html
+++ b/game.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <canvas id="game_container" width="800" height="600"></canvas>
+
+
+   <script type="text/javascript" src="automate.js"></script>
 <script>
 
 
@@ -17,6 +20,17 @@ function rand(min, max) {
 texture = new Image ();
 texture.src = "texture.jpg";
 
+player_img = new Image ();
+player_img.src = "player.jpg";
+
+
+var player = new Object();
+player.x = 23;
+player.y = 23;
+player.speed = 4;
+player.xvel = 0;
+player.yvel = 0;
+
 var Camera = new Object();
 Camera.x = 40;
 Camera.y = 40
@@ -27,9 +41,7 @@ Camera.yvel = 0;
 var keys = new Object();
 keys.w = new Object();
 keys.a = new Object();
-
 keys.s = new Object();
-
 keys.d = new Object();
 
 
@@ -41,10 +53,18 @@ for (var map_x = 0; map_x < 100; map_x++) {
   map[map_x] = new Array();
   for (var map_y = 0; map_y < 100; map_y++) {
      map[map_x][map_y] = new Object();
-     map[map_x][map_y].on = rand(1, 5);
+     map[map_x][map_y].on = rand(1, 3)-1;
 
   }
 }
+
+
+map = automata(map, "cave", 1, 1, 99, 99);
+
+map = automata(map, "cave", 1, 1, 99, 99);
+
+map = automata(map, "cave", 1, 1, 99, 99);
+
 
 
 xx = rand(0, 99);
@@ -119,22 +139,36 @@ function game_loop() {
 
 
         if (keys.w.on == 1) {
-console.log(keys);
-            Camera.yvel -= Camera.speed;
+
+            player.yvel -= player.speed;
         }
 
         if (keys.a.on == 1) {
-            Camera.xvel -= Camera.speed;
+            player.xvel -= player.speed;
         }
 
 
         if (keys.s.on == 1) {
-            Camera.yvel += Camera.speed;
+            player.yvel += player.speed;
         }
 
         if (keys.d.on == 1) {
-            Camera.xvel += Camera.speed;
+            player.xvel += player.speed;
         }
+
+
+        player.x = player.x + player.xvel;
+        player.y = player.y + player.yvel;
+
+        player.xvel = Math.round(player.xvel / 1.5);
+
+        player.yvel = Math.round(player.yvel / 1.5);
+
+
+
+        
+        
+
 
         Camera.x = Camera.x + Camera.xvel;
         Camera.y = Camera.y + Camera.yvel;
@@ -146,12 +180,18 @@ console.log(keys);
 
 
 
+       Camera.xvel -= (Camera.x - (player.x - 320));
+
+       Camera.yvel -= (Camera.y - (player.y - 200));
 
 
+ var player_mapx = Math.round((player.x + 25) / 50)
+    var player_mapy = Math.round((player.y + 25) / 50)
+if (map[player_mapx][player_mapy].on == 0) {
+player.xvel = 0-player.xvel;
+player.yvel = 0-player.yvel;
 
-
-
-
+}
 
 
     ctx.fillRect(0, 0, 1000, 1000);
@@ -160,19 +200,20 @@ console.log(keys);
 for (draw_x = 1; draw_x < 99; draw_x++) { 
 for (draw_y = 1; draw_y < 99; draw_y++) { 
 
- if (map[draw_x][draw_y].on > 2) {  
+ if (map[draw_x][draw_y].on > 0) {  
 
 ctx.drawImage(texture, (draw_x * 50) - Camera.x, (draw_y * 50) - Camera.y, 50, 50);
 
 
-}
-
 
 }
+
+
 }
+}
+ctx.drawImage(player_img, (player.x ) - Camera.x, (player.y ) - Camera.y, 50, 50);
 
-
-
+//map = gravity(map);
 
 
 }
